assets/css/style.css
/* Import Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&family=Architects+Daughter&family=Duru+Sans&display=swap');

/* Asterisk wildcard selector to create a consistent starting point across different browsers and remove white edges on the sides and the top of the page */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Basic styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Duru Sans', sans-serif;
}

/* H1 style */
h1 {
    font-family: 'Architects Daughter', sans-serif;
}

/* H2,3,4,5,6 style */
h2,
h3,
h4 {
    font-family: 'Antic Slab', sans-serif;
    text-align: center;
    font-size: 120%;
    padding: 10px 10px;
}

/* Header */
header {
    background-color: #FF8200;
    padding: 0 0;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: top;
    padding-right: 0px;
    height: 75.4px;

}

header a {
    text-decoration: none;
    color: #323232;
}

/* Menu style */
#menu {
    list-style-type: none;
    font-size: 120%;
    letter-spacing: 1px;
}

#menu>li {
    margin-bottom: 0.5em;
    text-align: center;
}

.current {
    color: #232323;
    font-weight: bold;
    border-bottom: 2px solid #232323;
}

/* Hide the checkbox */

#menu-toggle {
    display: none;
}

/* Hide menu initially, menu styling */
#menu {
    display: none;
    position: absolute;
    left: 0;
    z-index: 100;
    background-color: #FF8200;
    width: 100%;
    top: 75.4px;

}

/* Show the menu when the checkbox is checked */
#menu-toggle:checked~nav #menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 15px;
}

/* Logo link styling */
#logo-link {
    flex-grow: 1;
    order: -1;
}

/* Menu icon styling */
#menu-label {
    font-size: 45px;
    align-self: flex-start;
    padding-top: 3px;
    padding-right: 7px;
}

/* Logo style */
/* Logo text was replaced by logo image */
#logo {
    font-family: 'Architects Daughter', sans-serif;
    text-transform: uppercase;
    color: #000000;
    letter-spacing: 2px;
    padding-top: 5px;
    font-size: 25px;
    width: 70px;
}

/*Main content */
main {
    background-color: #ffffff;
    color: #232323;
    /* Make the main element to take up any excess space and push footer to the bottom */
    flex: 1 0 auto;
    /* Push main content down to adjust to the new header height */
    margin-top: 75.4px;
    padding: 0 0 20px 0;
}

/* Paragraph style */
p {
    text-align: center;
    padding: 10px 15px;
}

/* Hero section style */
#hero-section {
    height: 700px;
    width: 100%;
    background: url(../images/sheeps-head-vertical.webp) no-repeat center bottom/cover;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}
/* Home second image style*/
#kinsale-image-section {
    height: 500px;
    width: 100%;
    background: url(../images/kinsale-boats.webp) no-repeat center center/cover;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* Text overlay styles */
.hero-text {
    position: absolute;
    top: 0;
}

#home-page-h1 {
    font-size: 25px;
    text-transform: uppercase;
    letter-spacing: 2px;
    padding-top: 10px;
    text-align: center;
}

#home-page-tagline {
    font-size: 20px;
    letter-spacing: 1px;
    padding-top: 12px;
}

/* Quote section style */
#quote1 {
    font-style: italic;
}

#quote1 > p {
text-align: center;
padding: 0 10px;
}

#quote1 .quote-author {
    text-align: right;
    font-weight: bold;
    padding: 0 20px 20px 0;
}

/* Services & Why choose us styles */
#services, #why-choose-us {
    list-style-type: circle;
    padding: 10px 10px 10px 20px;
}

/*Footer */
footer {
    background-color: #009A44;
    padding: 5px 0;
}

.social-icons {
    display: flex;
    justify-content: space-evenly;
}

.social-icons a {
    font-size: 200%;
    margin: 0 25px;
    color: #ffffff;
}

/* Media query: mobile phones (440px and up) */
@media screen and (min-width: 440px) {
#hero-section {
    height: 1000px;
}
}

/* Media query: tablets and larger screens (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    nav {
        display: flex;
        align-items: center;
        width: auto;
    }

    #menu {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        align-items: center;
        top: 25px;
        padding-right: 20px;
        background: transparent;
        gap: 20px;
    }

    /* Add vertical dividers between menu items */
    #menu li:not(:last-child)::after {
        content: "|";
        margin-left: 20px;
        color: #323232;
    }

    #menu-label {
        display: none;
    }

    #logo {
        width: auto;
        padding-left: 4px;
        font-size: 180%;
    }

    #logo-link {
        display: flex;
        align-items: center;
    }

    /* Hero section */

    #hero-section {
        position: relative;
        height: 370px;
        max-width: 100%;
        background: url(../images/sheeps-head-pano.webp) no-repeat center right/cover;
        align-items: left;
    }
    .hero-text {
        top: 250px;
        text-align: left;
        left: 10px;
        color: #ffffff;
    }

    #home-page-h1, #home-page-tagline {
        text-align: left;
        font-size: 170%;
    }

    /* Home second image */

    #kinsale-image-section {
        background: url(../images/kinsale-pano.webp) no-repeat center center/cover;
    }

    /* Welcome section part 2*/
    .welcome-second-part {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        margin-left: 30px;
    }

    #services,
    #our-promise,
    #why-choose-us {
        flex: 1;
        padding: 10px;
        text-align: justify;
    }

    #our-promise > p {
        text-align: justify
    }

    .welcome-second-part > div {
        margin-right: 30px;
    }

}

/* * Media query: larger devices (laptops & desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 0.5px solid #323232;
    }

    /* Hero section */
    #hero-section {
        height: 550px;
    }
    .hero-text {
        top: 400px;
    }

    #home-page-h1,
    #home-page-tagline {
        font-size: 250%;
    }
}

/* * Media query: larger screens (1400px and up) */
@media screen and (min-width: 1400px) {
    /* Hero section */
    #hero-section {
        height: 700px;
    }
    
    .hero-text {
        top: 480px;
    }
}

